--- a/creditos-api/src/main/resources/application.properties
+++ b/creditos-api/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=none
 
 spring.kafka.bootstrap-servers=localhost:9092
-spring.kafka.consumer.group-id=creditos
+kafka.topic.consulta=consulta_credito
 
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
