chore: ajuste Dockerfile, correção build api

--- a/creditos-api/Dockerfile
+++ b/creditos-api/Dockerfile
@@ -1,5 +1,12 @@
-FROM openjdk:17-jdk-alpine
-VOLUME /tmp
-ARG JAR_FILE=target/creditos-api.jar
-COPY ${JAR_FILE} app.jar
-ENTRYPOINT ["java", "-jar", "/app.jar"]
+FROM maven:3.8.5-openjdk-17-slim AS build
+WORKDIR /app
+ARG CACHE_BUST=1
+COPY pom.xml .
+COPY src ./src
+RUN mvn clean package
+
+FROM openjdk:17-jdk-slim
+WORKDIR /app
+COPY --from=build /app/target/creditos-api.jar /app/creditos-api.jar
+EXPOSE 8080
+ENTRYPOINT ["java", "-jar", "creditos-api.jar"]
