--- a/creditos-api/src/main/resources/application.properties
+++ b/creditos-api/src/main/resources/application.properties
@@ -1,12 +1,16 @@
 spring.application.name=creditos-api
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/creditos
+spring.datasource.url=jdbc:postgresql://db:5432/creditosdb
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.jpa.hibernate.ddl-auto=none
 
-spring.kafka.bootstrap-servers=localhost:9092
-kafka.topic.consulta=consulta_credito
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.auto-commit=true
+spring.datasource.hikari.connection-timeout=30000
+
+spring.kafka.bootstrap-servers=kafka:9092
+kafka.topic.consulta=consultas
 
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
