feat: adicionar Dockerfile e configuração do Nginx, atualizar docker-compose e README para refletir novas portas

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,4 @@
 services:
-  backend:
-    container_name: backend
-    build: ./creditos-api
-    depends_on:
-      - db
-      - kafka
-    ports:
-      - "8080:8080"
-    networks:
-      - work
   db:
     image: postgres:16.2
     container_name: db
@@ -17,7 +7,7 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     volumes:
-      - volume-postgres:/var/lib/postgresql/data
+      - pgdata:/var/lib/postgresql/data
     ports:
       - "5432:5432"
     networks:
@@ -60,9 +50,30 @@ services:
       - kafka
     networks:
       - work
+  backend:
+    container_name: backend
+    build: ./creditos-api
+    image: creditos-api:latest
+    depends_on:
+      - db
+      - kafka
+    ports:
+      - "8080:8080"
+    networks:
+      - work
+  frontend:
+    container_name: frontend
+    build: ./creditos-web
+    image: creditos-web:latest
+    ports:
+      - "4200:80"
+    depends_on:
+      - backend
+    networks:
+      - work
 
 volumes:
-  volume-postgres:
+  pgdata:
 
 networks:
   work:
